FE: fix pagina account iniziale e dark mode errore fetch calendario

--- a/frontend/public/css/pages/account.css
+++ b/frontend/public/css/pages/account.css
@@ -1,8 +1,8 @@
 .account-input {
-    align-items: center;
     text-align: center;
 
-    margin: 50px 20px 20px 20px;
+
+    margin: 50px 15px;
 }
 
 .account-input > div {
